# install_area_detection

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: params.yaml
install_area_detection/: detector.py
launch/: detector.launch.py
