<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>install_area_detection</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for detecting and recognizing fans installation areas</description>
  <maintainer email="ximen0806449@gmail.com">Zhong-Zi-Heng</maintainer>
  <license>MIT</license>  

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
